--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+set-option -g default-terminal "xterm-16color"
 set-option -g status-interval 1
 set-option -g status-fg black
 set-option -g status-bg cyan
