--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,3 +6,4 @@ set-option -g status-right-length 80
 set-option -g status-left-length 15
 set-option -g status-left " #{client_width} x #{client_height}  |  "
 set-option -g status-right "#(whoami) on #{host}  |  %A, %B %d, %Y  |  %r "
+set -g history-limit 10000
