--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,4 +6,5 @@ set-option -g status-right-length 80
 set-option -g status-left-length 15
 set-option -g status-left " #{client_width} x #{client_height}  |  "
 set-option -g status-right "#(whoami) on #{host}  |  %A, %B %d, %Y  |  %r "
+set-option -sg escape-time 10
 set -g history-limit 10000
